--- a/csr/client/public/index.html
+++ b/csr/client/public/index.html
@@ -13,5 +13,6 @@
   <body>
     <div id="root"></div>
     <noscript>You need to enable JavScript to run this app.</noscript>
+    <script src="/bundle.js"></script>
   </body>
 </html>
