🔧 fix: html-webpack-plugin, webpack

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <noscript>You need to enable JavScript to run this app.</noscript>
-    <script src="/bundle.js"></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
